## CMakeLists.txt						-*- CMake -*-
##
## Copyright (C) 2006-2007 Christian Schenk
## 
## This file is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published
## by the Free Software Foundation; either version 2, or (at your
## option) any later version.
## 
## This file is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this file; if not, write to the Free Software
## Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307,
## USA.

set(inc_ini_files
  ${CMAKE_CURRENT_BINARY_DIR}/context.ini
  ${CMAKE_CURRENT_BINARY_DIR}/dvipdfm-common.ini
  ${CMAKE_CURRENT_BINARY_DIR}/formats-context.ini
)

set(main_ini_files
  ${CMAKE_CURRENT_BINARY_DIR}/amstex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/cont-cz.ini
  ${CMAKE_CURRENT_BINARY_DIR}/cont-de.ini
  ${CMAKE_CURRENT_BINARY_DIR}/cont-en.ini
  ${CMAKE_CURRENT_BINARY_DIR}/cont-es.ini
  ${CMAKE_CURRENT_BINARY_DIR}/cont-fr.ini
  ${CMAKE_CURRENT_BINARY_DIR}/cont-it.ini
  ${CMAKE_CURRENT_BINARY_DIR}/cont-nl.ini
  ${CMAKE_CURRENT_BINARY_DIR}/cont-ro.ini
  ${CMAKE_CURRENT_BINARY_DIR}/cont-uk.ini
  ${CMAKE_CURRENT_BINARY_DIR}/cslatex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/csplain.ini
  ${CMAKE_CURRENT_BINARY_DIR}/dvipdfm.ini
  ${CMAKE_CURRENT_BINARY_DIR}/dvipdfmx.ini
  ${CMAKE_CURRENT_BINARY_DIR}/dvips.ini
  ${CMAKE_CURRENT_BINARY_DIR}/formats.ini
  ${CMAKE_CURRENT_BINARY_DIR}/jadetex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/lambda.ini
  ${CMAKE_CURRENT_BINARY_DIR}/latex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/mex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/mllatex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/mltex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/omega.ini
  ${CMAKE_CURRENT_BINARY_DIR}/pdfjadetex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/pdflatex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/pdfmex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/pdfplatex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/pdftex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/pdftexinfo.ini
  ${CMAKE_CURRENT_BINARY_DIR}/platex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/t4ht.ini
  ${CMAKE_CURRENT_BINARY_DIR}/tex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/tex4ht.ini
  ${CMAKE_CURRENT_BINARY_DIR}/texinfo.ini
  ${CMAKE_CURRENT_BINARY_DIR}/ttf2pk.ini
  ${CMAKE_CURRENT_BINARY_DIR}/ttf2tfm.ini
  ${CMAKE_CURRENT_BINARY_DIR}/xdvipdfmx.ini
  ${CMAKE_CURRENT_BINARY_DIR}/xelatex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/xetex.ini
  ${CMAKE_CURRENT_BINARY_DIR}/yap.ini
)

file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/header.txt"
  ";;; DO NOT EDIT THIS FILE!\n\n")

file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/footer.txt"
  "\n;;;\n")
  
foreach(i ${inc_ini_files})
  get_filename_component(ininame ${i} NAME)
  add_custom_command(
    OUTPUT ${i}
    COMMAND ${CAT_EXE} header.txt> ${ininame}
    COMMAND ${CAT_EXE} ${CMAKE_CURRENT_SOURCE_DIR}/${ininame}.body>> ${ininame}
    COMMAND ${DOS2UNIX_EXE} ${ininame}
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${ininame}.body
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    VERBATIM
  )
endforeach(i)

foreach(i ${main_ini_files})
  get_filename_component(ininame ${i} NAME)
  add_custom_command(
    OUTPUT ${i}
    COMMAND ${CAT_EXE} header.txt> ${ininame}
    COMMAND ${CAT_EXE} ${CMAKE_CURRENT_SOURCE_DIR}/${ininame}.body>> ${ininame}
    COMMAND ${CAT_EXE} footer.txt>> ${ininame}
    COMMAND ${CP_EXE} ${CMAKE_CURRENT_SOURCE_DIR}/${ininame}.body tmp
    COMMAND ${cfg_exe} tmp>> ${ininame}
    COMMAND ${DOS2UNIX_EXE} ${ininame}
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${ininame}.body
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    VERBATIM
  )
endforeach(i)

add_custom_target(
  ini_files
  ALL
  DEPENDS ${inc_ini_files} ${main_ini_files}
)

install(
  FILES ${inc_ini_files} ${main_ini_files}
  DESTINATION ${configdir}
)
